--- a/day05/01_init.html
+++ b/day05/01_init.html
@@ -14,7 +14,7 @@
   <div ng-controller="ctrl1" ng-init="age=22">
     {{name}}<br>
     1=={{age}}
-    <div ng-init="a=1">
+    <div ng-init="a=1"><!-- //$scope.a=1 -->
       {{a}}
     </div>
     div:{{a}}
